--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - uses: actions/setup-go@v4
         with:
-          go-version-file: go.work
+          go-version: '^1.21'
 
       - name: run checks
         run: go run mage.go check
