--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,6 +29,8 @@ jobs:
             mode: tinygo
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - uses: actions/setup-go@v4
         with:
@@ -49,6 +51,8 @@ jobs:
       image: golang:alpine
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - run: if command -v gcc &> /dev/null; then echo "GCC found but not expected"; exit 321; fi
 
