--- a/buildtools/wasm/Dockerfile
+++ b/buildtools/wasm/Dockerfile
@@ -28,6 +28,8 @@ RUN $CXX -o libpg_query-noopt.so -Wl,--global-base=1024 $LDFLAGS \
     -Wl,--export=pg_query_free_scan_result \
     -Wl,--export=pg_query_normalize \
     -Wl,--export=pg_query_free_normalize_result \
+    -Wl,--export=pg_query_fingerprint \
+    -Wl,--export=pg_query_free_fingerprint_result \
     -Wl,--export=__stack_pointer \
     -Wl,--export=__heap_base
 
