Restore old for now

--- a/buildtools/wasm/Dockerfile
+++ b/buildtools/wasm/Dockerfile
@@ -6,14 +6,15 @@ ENV CFLAGS "${CFLAGS} -O3 -D_WASI_EMULATED_PROCESS_CLOCKS -D_WASI_EMULATED_MMAN"
 ENV LDFLAGS $LDFLAGS -mexec-model=reactor -lwasi-emulated-process-clocks -lwasi-emulated-mman
 
 WORKDIR /workspace
-ADD internal/cparser .
+RUN curl -L https://github.com/pganalyze/libpg_query/archive/refs/tags/15-4.2.3.tar.gz | tar -xz --strip-components 1 -C /workspace
 ADD buildtools/wasm/patch.txt patch.txt
-RUN patch -p3 < patch.txt
+RUN patch -p1 < patch.txt
 
-RUN CMD="$CC -Iinclude -fno-strict-aliasing -fwrapv -fPIC -c $CFLAGS *.c" && echo $CMD && $CMD
+RUN make build && \
+    $RANLIB libpg_query.a
 
 RUN $CXX -o libpg_query-noopt.so -Wl,--global-base=1024 $LDFLAGS \
-    *.o \
+    libpg_query.a \
     -Wl,--export=malloc \
     -Wl,--export=free \
     -Wl,--export=pg_query_init \
@@ -32,7 +33,6 @@ RUN $CXX -o libpg_query-noopt.so -Wl,--global-base=1024 $LDFLAGS \
     -Wl,--export=__stack_pointer \
     -Wl,--export=__heap_base
 
-RUN mv libpg_query-noopt.so libpg_query.so
-#RUN wasm-opt -o libpg_query.so --low-memory-unused --flatten --rereloop --asyncify -O3 libpg_query-noopt.so
+RUN wasm-opt -o libpg_query.so --low-memory-unused --flatten --rereloop -O3 libpg_query-noopt.so
 
 CMD ["bash", "-c", "cp libpg_query.so /out/"]
