Disable cgo on windows since not supported

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,8 @@ jobs:
           # https://github.com/tinygo-org/tinygo/issues/3594
           - os: windows-2022
             mode: tinygo
+          - os: windows-2022
+            mode: cgo
     steps:
       - uses: actions/checkout@v4
         with:
@@ -40,6 +42,7 @@ jobs:
         run: go run mage check
         env:
           WASI_TEST_MODE: ${{ matrix.mode }}
+          CGO_ENABLED: ${{ startsWith(matrix.os, 'windows-') && '0' }}
 
   # Runs tests using wazero inside a minimal golang docker image. This makes sure the code builds
   # even when there is no C toolchain available. It is possible for code to work fine with CGO_ENABLED=0
