--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,18 +15,13 @@ jobs:
       fail-fast: false
       matrix:
         mode:
-          # TODO(anuraaga): Implement cgo path
-          #- cgo
-          #- tinygo
+          - cgo
           - wazero
         os:
           - macos-12
           - ubuntu-22.04
           - windows-2022
         exclude:
-          # https://github.com/tinygo-org/tinygo/issues/3594
-          - os: windows-2022
-            mode: tinygo
           - os: windows-2022
             mode: cgo
     steps:
