--- a/buildtools/wasm/Dockerfile
+++ b/buildtools/wasm/Dockerfile
@@ -9,9 +9,13 @@ WORKDIR /workspace
 ADD internal/cparser .
 ADD buildtools/wasm/patch.txt patch.txt
 ADD buildtools/wasm/patch-musl.txt patch-musl.txt
+ADD buildtools/wasm/patch-libpgquery.txt patch-libpgquery.txt
 RUN patch -p3 < patch.txt
 # Workaround bug in strtol in musl, used by wasi https://www.openwall.com/lists/musl/2023/12/01/1
 RUN patch -p3 < patch-musl.txt
+# Workaround obvious bug in libpgquery that seems to only cause problems with this toolchain
+# https://github.com/pganalyze/libpg_query/pull/223
+RUN patch -p3 < patch-libpgquery.txt
 
 RUN CMD="$CC -Iinclude -fstack-protector -fno-strict-aliasing -fwrapv -fPIC -std=gnu99 -Wno-deprecated-non-prototype -c $CFLAGS *.c" && echo $CMD && $CMD
 RUN $AR rs libpg_query.a *.o
