--- a/buildtools/wasm/Dockerfile
+++ b/buildtools/wasm/Dockerfile
@@ -32,6 +32,8 @@ RUN $CXX -o libpg_query-noopt.so -Wl,--global-base=1024 $LDFLAGS \
     -Wl,--export=pg_query_free_normalize_result \
     -Wl,--export=pg_query_fingerprint \
     -Wl,--export=pg_query_free_fingerprint_result \
+    -Wl,--export=pg_query_deparse_protobuf \
+    -Wl,--export=pg_query_free_deparse_result \
     -Wl,--export=XXH3_64bits_withSeed \
     -Wl,--export=__stack_pointer \
     -Wl,--export=__heap_base
